--- a/locales/fr/admin.po
+++ b/locales/fr/admin.po
@@ -1,11 +1,20 @@
+msgid ""
+msgstr ""
+"Content-Type: text/plain; charset=UTF-8\n"
+"Project-Id-Version: resume 3.0\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2023-03-08T16:24:04+00:00\n"
+"Last-Translator: Philippe Henaff\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
 msgid "Theme configuration upgraded."
 msgstr "La configuration du thème a été mise à jour."
 
 msgid "Presentation"
 msgstr "Présentation"
-
-msgid "Stickers"
-msgstr "Étiquettes"
 
 msgid "Profile image"
 msgstr "Image de profil"
@@ -13,14 +22,18 @@ msgstr "Image de profil"
 msgid "Image URL:"
 msgstr "URL de l'image :"
 
+msgid "Colors"
+msgstr "Couleurs"
+
+msgid "Main color:"
+msgstr "Couleur principale :"
+
+msgid "Stickers"
+msgstr "Étiquettes"
+
 msgid "Social links"
 msgstr "Liens vers les médias sociaux"
 
 msgid "Social links (header)"
 msgstr "Lien vers les médias sociaux (en-tête)"
 
-msgid "Colors"
-msgstr "Couleurs"
-
-msgid "Main color:"
-msgstr "Couleur principale :"
