--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -1,29 +1,14 @@
-msgid "Additionnal style directives"
-msgstr "Directives CSS supplémentaires"
-
-msgid "reactions"
-msgstr "réactions"
-
-msgid "no reactions"
-msgstr "pas de réaction"
-
-msgid "one reaction"
-msgstr "une réaction"
-
-msgid "%s reactions"
-msgstr "%s réactions"
-
-msgid "Add ping"
-msgstr "Ajouter un rétrolien"
-
-msgid "From"
-msgstr "De"
-
-msgid "Preview"
-msgstr "Prévisualiser"
-
-msgid "Send"
-msgstr "Envoyer"
+msgid ""
+msgstr ""
+"Content-Type: text/plain; charset=UTF-8\n"
+"Project-Id-Version: resume 3.0\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2023-03-08T16:24:04+00:00\n"
+"Last-Translator: Philippe Henaff\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgid "Show menu"
 msgstr "Montrer le menu"
@@ -34,26 +19,15 @@ msgstr "Cacher le menu"
 msgid "Main menu"
 msgstr "Menu principal"
 
-msgid "Required field"
-msgstr "Champ obligatoire"
-
 msgid "Error page"
 msgstr "Page d'erreur"
 
-msgid "Entries list"
-msgstr "Liste des publications"
-
 msgid "Archives list"
 msgstr "Liste des archives"
-
-msgid "Entry"
-msgstr "Publication"
-
-msgid "Page"
-msgstr "Page"
 
 msgid "Post"
 msgstr "Billet"
 
 msgid "Tags list"
 msgstr "Liste des mots-clés"
+
